Thu Jan 25 00:41:59 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * options.h.in (AUTH_SERVER_SUPPORT, AUTH_CLIENT_SUPPORT): change
        comment now that no longer under construction.

Wed Jan 24 15:25:22 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Version 1.7.1.

	* Version 1.7.

Sat Jan 20 00:05:08 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Version 1.6.87.

Mon Jan 15 18:14:55 1996  Gary Oberbrunner  <garyo@avs.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* tag.c (val_direntproc):  New function to ignore
	  nonexistent dirs when recursing to check tag validity.
	  (tag_check_valid): Pass it to start_recursion.
	* sanity.sh (death): New tests 65a0-65a6 cause test 74 to test for
	above-fixed bug.

Mon Jan 15 12:55:37 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c: Revert change to run getopt_long twice.  This can go in
	after 1.7.

Mon Jan 15 13:03:28 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* filesubr.c (deep_remove_dir): added test of EEXIST for nonempty
	  directory (Posix states that both ENOTEMPTY (BSD) and EEXIST
	  (SYSV) are valid)

	* main.c (main): run getopt_long twice to allow command-line
	  suppression of reading the cvsrc file

Fri Jan 12 10:02:43 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Version 1.6.86.

Thu Jan 11 23:28:05 1996  J.T. Conklin  <jtc@rtl.cygnus.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* fileattr.h (fileattr_startdir): Add comment about REPOS == NULL.
	* fileattr.c (fileattr_read, fileattr_write): Assert that
	fileattr_stored_repos != NULL.
	(fileattr_free): If fileattr_stored_repos is NULL, don't free it.

Thu Jan 11 18:03:21 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * scramble.c (descramble): deal with DIAGNOSTIC better.

Thu Jan 11 12:04:42 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* main.c: remove CVS_NOADMIN.

	* options.h.in: remove CVS_NOADMIN

Thu Jan 11 10:28:44 1996  Karl Fogel  <kfogel@floss.red-bean.com>
